# deception-mesh

./: .dockerignore  .editorconfig  .env.production  .env.production.example  .gitattributes  .gitignore  Cargo.toml  README.md  compose.production.yml  docker-compose.yml
.github/workflows/: ci.yml  release-images.yml  t31-ci.yml
crates/control_plane/: Cargo.toml
crates/control_plane/src/: main.rs  severity.rs
crates/sensor_agent/: Cargo.toml
crates/sensor_agent/src/: config.rs  event_reporter.rs  http_honeypot.rs  main.rs  ssh_honeypot.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
deploy/docker/: .dockerignore  control_plane.Dockerfile  sensor_agent.Dockerfile
deploy/runtime/: quickstart.state.json  sensor.production.toml  sensor.toml
deploy/sensor/: sensor.example.toml  sensor.production.toml.example
deploy/sql/: 0001_tenants_rbac.sql  0006_sensors_heartbeat.sql  0007_events.sql  0008_events_severity.sql  0010_tenant_settings_webhook_threshold.sql  0013_dev_seed.sql
deploy/sql_prod/: 0002_auth.sql  0003_audit_log.sql  0004_sensors_min.sql  0005_sensor_enroll_tokens.sql  0009_events_query_indexes.sql  0011_webhook_deliveries.sql  0012_webhook_delivery_attempts.sql
docs/: architecture.md  consultas-operativas.md  deception-mesh-notas-de-seguridad.md  deception-mesh-runbook-operativo.md  mvp_scope.md  quickstart.md
docs/diagrams/: architecture.puml  deployment_mvp.puml  event_flow_sequence.puml
scripts/: bootstrap_production_admin.sh  build_local_images.sh  demo.sh  deploy_production.sh  e2e_t01_t12.sh  e2e_t01_t13.sh  e2e_t16.sh  e2e_t17.sh  e2e_t18.sh  e2e_t20.sh  e2e_t23.sh  e2e_t24_webhook_retries.sh  e2e_t25_events_export_csv.sh  e2e_t29_quickstart.sh  e2e_t31_auth_and_rbac.sh  e2e_t31_ingest_schema_and_severity.sh  e2e_t31_tenant_isolation.sh  e2e_t31_webhook_retries.sh  mock_webhook_flaky_receiver.py  mock_webhook_receiver.py  prepare_sql_prod.sh  production_smoke_test.sh  register_production_sensor.sh  run_t31_suite.sh  t29_install_mvp_local.sh  test_lib.sh
