[workspace]
resolver = "2"
members = [
  "crates/shared",
  "crates/control_plane",
  "crates/sensor_agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["orozjuanfelipe"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

clap = { version = "4", features = ["derive", "env"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync", "io-util"] }
axum = "0.7"

tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.14"

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

sha2 = "0.10"
hex = "0.4"

config = "0.14"

# T12
async-trait = "0.1"
russh = "0.45"
russh-keys = "0.45"

# T13
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
tokio-rustls = "0.24"
rcgen = "0.12"

# T16
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }