[package]
name = "control_plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

tokio.workspace = true
axum.workspace = true

tokio-postgres = { workspace = true, features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true

sha2.workspace = true
hex.workspace = true

reqwest.workspace = true