[package]
name = "sensor_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

tokio.workspace = true
config.workspace = true
axum.workspace = true

# T12
async-trait.workspace = true
russh.workspace = true
russh-keys.workspace = true

# T13
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true

# T16
reqwest.workspace = true
chrono.workspace = true